--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,6 +6,7 @@ body {
   font-family: "Avenir Next", "Hiragino Sans", sans-serif;
   font-size: 14px;
   font-weight: 400;
+  margin: 0;
 }
 
 .container {
@@ -18,13 +19,32 @@ body {
   height: 30vh;
 }
 
+.smoke-top {
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.2));
+  position: fixed;
+  top: 0;
+  z-index: 50;
+  width: 100%;
+  height: 100px;
+}
+.smoke-bottom {
+  background-image: linear-gradient(to top, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.2));
+  position: fixed;
+  bottom: 0;
+  z-index: 50;
+  width: 100%;
+  height: 100px;
+}
+
 /* ヘッダー ------------------------------- */
 header {
   height: 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
 }
 
 .header-color {
@@ -38,7 +58,7 @@ header {
 .logo {
   font-weight: 900;
   font-size: 24px;
-  padding-left: 14px;
+  padding-left: 16px;
 }
 
 .hamburger-menu {
@@ -50,7 +70,6 @@ header {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  padding: 0;
   cursor: pointer;
 }
 
@@ -100,6 +119,8 @@ header {
   top: 50px;
   width: 100%;
   z-index: 9999;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
 }
 
 .navigation_list {
@@ -133,4 +154,13 @@ header {
   font-size: 24px;
   font-weight: 900;
   text-align: center;
+}
+
+.huge {
+  font-size: 20vw;
+  font-weight: 900;
+}
+
+.cyan {
+  color: cyan;
 }/*# sourceMappingURL=stylesheet.css.map */
