--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -9,24 +9,32 @@ body {
     font-size: 14px;
     font-weight: 400;
     margin: 0;
+    transition: 2s;
 }
 .container {
-    min-height: 600px;
     padding: 0 16px;
     margin: 0 auto;
-    background-color: black;
-}
-.blank-screen {
-    height: 30vh;
+    max-width: 800px;
+    display: flex;
+    flex-direction: column;
 }
 .smoke-top {
-    background-color: linear-gradient(to bottom, rgba(255,255,255,0.8), rgba(255,255,255,0.2));
+    background-image: linear-gradient(to bottom, rgba(255,255,255,0.8), rgba(255,255,255,0));
     position: fixed;
     top: 0;
     z-index: 50;
     width: 100%;
     height: 60px;
 }
+.smoke-bottom {
+    background-image: linear-gradient(to top, rgba(255,255,255,0.8), rgba(255,255,255,0));
+    position: fixed;
+    bottom: 0;
+    z-index: 50;
+    width: 100%;
+    height: 60px;
+}
+
 /* ヘッダー ------------------------------- */
 header {
     height: 50px;
@@ -113,23 +121,81 @@ header {
     transition: .5s;
 }
 /* メイン ------------------------------ */
+.area {
+    width: 100%;
+    padding-top: 250%;
+    position: relative;
+    background-color: #fbffbc;
+    margin-bottom: 8px;
+}
 .pop {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 25%;
-    margin: 0 auto;
 }
 .pop-image {
     width: 100%;
     height: auto;
 }
-.pop-text {
-    font-size: 24px;
-    font-weight: 900;
-    text-align: center;
+.sun {
+    width: 60%;
+    position: absolute;
+    top: -10%;
+    left: -10%;
+}
+.window {
+    width: 60%;
+    opacity: 0.5;
+    height: auto;
+    position: absolute;
+    &.left {
+        top: 20%;
+    }
+    &.right {
+        top: 50%;
+        right: 10%;
+    }
+}
+.angel {
+    position: absolute;
+    width: 90%;
+    top: 20%;
+    right: -5%;
+    rotate: 10deg;
 }
 .huge {
-    font-size: 20vw;
+    font-size: clamp(24px, 20vw, 250px);
     font-weight: 900;
+    position: absolute;
+    bottom: 10%;
+    line-height: 1;
+    z-index: 30;
+
 }
 .cyan {
     color: cyan;
+}
+/* jquery ---------------------------------- */
+.fade-in-left {
+    opacity: 0;
+    transform: translate(-50%, 0);
+    transition: 2s;
+}
+.fade-in-right {
+    opacity: 0;
+    transform: translate(50%, 0);
+    transition: 2s;
+}
+.is-show {
+    transform: translate(0, 0);
+    opacity: 1;
+}
+.rotate {
+    animation: rotate-anim 5s linear infinite;
+}
+@keyframes rotate-anim {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
