--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,6 @@ body {
   font-weight: 400;
   margin: 0;
   transition: 2s;
-  overflow-x: hidden;
 }
 
 .container {
@@ -17,6 +16,7 @@ body {
   max-width: 800px;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .smoke-top {
