--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -10,7 +10,6 @@ body {
     font-weight: 400;
     margin: 0;
     transition: 2s;
-    overflow-x: hidden;
 }
 .container {
     padding: 0 16px;
@@ -18,6 +17,7 @@ body {
     max-width: 800px;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 .smoke-top {
     background-image: linear-gradient(to bottom, rgba(255,255,255,0.8), rgba(255,255,255,0));
