--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -10,17 +10,19 @@ body {
     font-weight: 400;
     margin: 0;
     transition: 2s;
+    position: relative;
 }
 .container {
-    padding: 0 16px;
     margin: 0 auto;
+    width: 100%;
     max-width: 800px;
+    position: relative;
     display: flex;
     flex-direction: column;
     overflow: hidden;
 }
 .smoke-top {
-    background-image: linear-gradient(to bottom, rgba(255,255,255,0.8), rgba(255,255,255,0));
+    background-image: linear-gradient(to bottom, rgba(255,255,255,1), rgba(255,255,255,0));
     position: fixed;
     top: 0;
     z-index: 50;
@@ -28,14 +30,45 @@ body {
     height: 60px;
 }
 .smoke-bottom {
-    background-image: linear-gradient(to top, rgba(255,255,255,0.8), rgba(255,255,255,0));
+    background-image: linear-gradient(to top, rgba(255,255,255,1), rgba(255,255,255,0));
     position: fixed;
     bottom: 0;
     z-index: 50;
     width: 100%;
     height: 60px;
 }
-
+.rope {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 20%;
+    width: 8px;
+    border: 1.5px solid black;
+    background: linear-gradient(to right, rgb(192, 169, 124) 0%, rgb(210, 184, 134) 40%, rgb(146, 127, 90) 100%);
+    z-index: 20;
+}
+.climber-frame {
+    position: fixed;
+    width: 8px;
+    bottom: 15%;
+    z-index: 30;
+}
+.climber {
+    width: 120px;
+    height: 180px;
+    transform: translate(45%);
+    background-image: url(images/climber.svg) ;
+    background-size: 300% auto;
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    z-index: 30;
+    float: right;
+    animation: none;
+}
+@keyframes climbing {
+    0% { background-position: 0 0; }
+    100% { background-position: -240px 0; }
+}
 /* ヘッダー ------------------------------- */
 header {
     height: 50px;
@@ -56,6 +89,13 @@ header {
     font-weight: 900;
     font-size: 24px;
     padding-left: 16px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    .mugi {
+        height: 50px;
+        padding-right: 10px;
+    }
 }
 .hamburger-menu {
     width: 50px;
@@ -122,11 +162,16 @@ header {
     transition: .5s;
 }
 /* メイン ------------------------------ */
+.area-top {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    margin-bottom: 8px;
+}
 .area {
     width: 100%;
     padding-top: 250%;
     position: relative;
-    background-color: #fbffbc;
     margin-bottom: 8px;
 }
 .pop {
@@ -141,10 +186,10 @@ header {
     height: auto;
 }
 .sun {
-    width: 60%;
+    width: 100%;
     position: absolute;
-    top: -10%;
-    left: -10%;
+    top: -20%;
+    left: -30%;
 }
 .window {
     width: 60%;
@@ -156,7 +201,7 @@ header {
     }
     &.right {
         top: 50%;
-        right: 10%;
+        right: 5%;
     }
 }
 .angel {
@@ -166,14 +211,101 @@ header {
     right: -5%;
     rotate: 10deg;
 }
+.mountains {
+    position: absolute;
+    width: 200%;
+    top: 0%;
+    left: -50%;
+    mask-image: linear-gradient(to bottom, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 100%);
+}
+.bird-slider {
+    position: absolute;
+    width: 100%;
+    height: 30%;
+    top: 30%;
+    left: -100%;
+    animation: birds 10s linear infinite;
+}
+@keyframes birds {
+    to { left: 100%; top: 60%; }
+}
+.bird-1 {
+    width: 30%;
+    position: absolute;
+    top: 10%;
+    left:  10%;
+}
+.bird-2 {
+    width: 60%;
+    position: absolute;
+    top: 50%;
+    left:  50%;
+    z-index: 35;
+}
+.bird-3 {
+    width: 20%;
+    position: absolute;
+    top: 50%;
+    left:  30%;
+    z-index: 20;
+}
+.tower {
+    width: 130%;
+    position: absolute;
+    top: -20%;
+    left: -45%;
+}
+.flower-1 {
+    width: 60%;
+    position: absolute;
+    top: 60%;
+    left: -10%;
+}
+.flower-2 {
+    width: 70%;
+    position: absolute;
+    top: 70%;
+    left: 10%;
+}
+.flower-3 {
+    width: 50%;
+    position: absolute;
+    top: 70%;
+    left: 60%;
+}
+.sea {
+    position: absolute;
+    width: 150%;
+    top: 40%;
+    left: -50%;
+    mask-image: linear-gradient(to bottom, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 100%);
+}
+.palm {
+    position: absolute;
+    width: 200%;
+    top: 20%;
+    left: -110%;
+}
+.cocktail {
+    position: absolute;
+    width: 150%;
+    top: 60%;
+    left: -50%;
+}
+.undersea {
+    position: absolute;
+    width: 150%;
+    top: 30%;
+    left: -50%;
+    mask-image: linear-gradient(to bottom, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 100%);
+}
 .huge {
-    font-size: clamp(24px, 20vw, 250px);
+    font-size: 20vw;
     font-weight: 900;
     position: absolute;
     bottom: 10%;
     line-height: 1;
     z-index: 30;
-
 }
 .cyan {
     color: cyan;
@@ -192,6 +324,13 @@ header {
 .is-show {
     transform: translate(0, 0);
     opacity: 1;
+}
+.is-disappear {
+    transform: scale(0);
+    transition: 0.5s ease-out;
+}
+.is-appear {
+    transform: scale(1);
 }
 .rotate {
     animation: rotate-anim 5s linear infinite;
