--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -16,7 +16,7 @@
   }
 }
 body {
-  color: rgb(38, 47, 52);
+  color: #48575e;
   font-family: "Avenir Next", "Hiragino Sans", sans-serif;
   font-weight: 600;
   transition: 2s;
@@ -136,7 +136,7 @@ header {
   display: inline-block;
   width: 50%;
   height: 3px;
-  background: rgb(38, 47, 52);
+  background: #48575e;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -191,7 +191,7 @@ header {
 .navigation_link {
   font-weight: 700;
   font-size: 16px;
-  color: rgb(38, 47, 52);
+  color: #48575e;
   text-decoration: none;
   display: block;
   padding: 8px 24px;
@@ -208,6 +208,7 @@ header {
 .area {
   width: 100%;
   position: relative;
+  margin-bottom: 8px;
 }
 
 .area-horizon {
@@ -229,8 +230,9 @@ header {
 .text-box {
   background-color: white;
   padding: 8px;
-  border: 3px solid rgb(38, 47, 52);
+  border: 3px solid #48575e;
   border-radius: 12px;
+  position: relative;
   z-index: 50;
 }
 
@@ -257,18 +259,27 @@ header {
   font-weight: 800;
 }
 
-.pop-about-us {
-  margin: 0 auto;
-  width: 60%;
-  height: 50px;
-  background-color: rgb(66, 206, 138);
+.pop-sub {
+  text-align: center;
+  font-size: 3em;
+  font-weight: 900;
+  color: #eb5e30;
+  -webkit-text-stroke: 2px #48575e;
 }
 
-.area-black {
+.plan-slider {
   width: 100%;
-  height: 400px;
-  margin-bottom: 8px;
-  background-color: black;
+  margin: 16px auto 64px auto;
+  height: 80vh;
+  z-index: 40;
+}
+
+.plan {
+  width: 80%;
+  height: 80vh;
+  margin: 0 8px;
+  background-color: rgb(255, 251, 215);
+  border-radius: 24px;
 }
 
 .bird-slider {
@@ -307,28 +318,6 @@ header {
   top: 50%;
   left: 30%;
   z-index: 20;
-}
-
-.tower {
-  position: absolute;
-  height: 80%;
-  bottom: 30%;
-  right: 20%;
-  -webkit-mask-image: linear-gradient(to top, rgb(0, 0, 0) 50%, rgba(0, 0, 0, 0) 100%);
-          mask-image: linear-gradient(to top, rgb(0, 0, 0) 50%, rgba(0, 0, 0, 0) 100%);
-}
-
-.huge {
-  font-size: 20vw;
-  font-weight: 900;
-  position: absolute;
-  bottom: 10%;
-  line-height: 1;
-  z-index: 30;
-}
-
-.cyan {
-  color: cyan;
 }
 
 /* jquery ---------------------------------- */
