--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -57,7 +57,7 @@ body {
 .rope {
     position: absolute;
     top: 0;
-    bottom: 0;
+    bottom: 180px;
     right: 15%;
     width: 8px;
     border: 1.5px solid black;
@@ -74,7 +74,7 @@ body {
     width: 120px;
     height: 180px;
     transform: translate(45%);
-    background-image: url(images/climber.svg) ;
+    background-image: url("../images/climber.svg") ;
     background-size: 300% auto;
     background-repeat: no-repeat;
     background-position: 0 0;
@@ -185,6 +185,15 @@ header {
     position: relative;
     margin-bottom: 8px;
 }
+.area-orange {
+    width: 100%;
+    padding: 40px 0;
+    position: relative;
+    margin-bottom: 8px;
+    background-color: $primary-color;
+    border-top: 3px solid $font-color;
+    border-bottom: 3px solid $font-color;
+}
 .area-horizon {
     width: 100%;
     position: relative;
@@ -207,6 +216,13 @@ header {
     position: relative;
     z-index: 50;
 }
+.subtitle {
+    width: 80%;
+    margin: 0 auto; 
+    display: block;
+    position: relative;
+    z-index: 50;
+}
 .push {
     position: absolute;
     width: 15%;
@@ -215,7 +231,7 @@ header {
     left: 5%;
 }
 .mugi-selif {
-    background-image: url("images/selif.svg");
+    background-image: url("../images/selif.svg");
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -228,12 +244,44 @@ header {
     font-size: 2em;
     font-weight: 800;
 }
+.palette {
+    position: absolute;
+    bottom: -10%;
+    left: -35%;
+    border-radius: 50%;
+    width: 70%;
+    height: 70%;
+}
+.bg-button {
+    width: 25%;
+    height: 25%;
+    border-radius: 50%;
+    border: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    border: 3px solid $font-color;
+}
+.game-frame {
+    width: 50%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.game-button {
+    width: 70%;
+    height: 70%;
+    border: 3px solid $font-color;
+    border-radius: 10px;
+    background-color: $primary-color;
+    box-shadow: 0px 12px 0 #7a5143;
+    transition: 0.3s;
+}
 .pop-sub {
     text-align: center;
-    font-size: 3em;
-    font-weight: 900;
-    color: $primary-color;
-    -webkit-text-stroke: 2px $font-color;
+    font-size: 1.5em;
+    color: white;
 }
 .plan-slider {
     width: 100%;
@@ -250,34 +298,25 @@ header {
 }
 .bird-slider {
     position: absolute;
-    width: 120%;
+    width: 100%;
     height: 50%;
     top: 30%;
-    left: -100%;
-    animation: birds 10s linear infinite;
+    left: -120%;
+    animation: birds 5s linear infinite;
 }
 @keyframes birds {
-    to { left: 100%; top: 60%; }
+    0% { left: -120%; top: 60%; }
+    80% { left: -120%; top: 60%; }
+    100% { left: 100%; top: -100%; }
 }
-.bird-1 {
-    width: 30%;
-    position: absolute;
-    top: 10%;
-    left:  10%;
-}
-.bird-2 {
-    width: 80%;
-    position: absolute;
-    top: 50%;
-    left:  50%;
-    z-index: 35;
-}
-.bird-3 {
-    width: 20%;
-    position: absolute;
-    top: 50%;
-    left:  30%;
-    z-index: 20;
+.area-footer {
+    width: 100%;
+    padding: 40px 0 100px 0;
+    position: relative;
+    margin-bottom: 8px;
+    text-align: center;
+    background-color: $secondary-color;
+    border-top: 3px solid $font-color;
 }
 /* jquery ---------------------------------- */
 .fade-in-left {
@@ -305,6 +344,34 @@ header {
 }
 .is-appear {
     transform: scale(1);
+}
+.wani {
+    animation: r-to-l 20s linear infinite, up-down 1s steps(2) infinite;
+}
+@keyframes r-to-l {
+    0% { left: 100%;}
+    100% { left: -50%;}
+}
+.rakko {
+    animation: l-to-r 20s linear infinite;
+}
+@keyframes l-to-r {
+    0% { left: -50%;}
+    100% { left: 100%;}
+}
+@keyframes up-down {
+    0% { transform: translate(0, 8px); }
+    100% { transform: translate(0, 0); }
+}
+.kirin {
+    animation: peeping 7s linear infinite;
+}
+@keyframes peeping {
+    0% { left: -50%;}
+    45% { left: -50%;}
+    50% { left: -5%;}
+    95% { left: -5%;}
+    100% { left: -50%;}
 }
 .shake {
     transform: rotate(10deg);
