--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -8,6 +8,9 @@ $font-color: #48575e;
 $font-subcolor: green;
 
 /* 共通 ------------------------------- */
+html {
+    scroll-behavior: smooth;
+}
 .media {
     font-size: 16px;
 }
@@ -92,6 +95,8 @@ body {
     text-decoration: none;
     padding: 6px 18px;
     border-radius: 20px;
+    position: relative;
+    z-index: 10;
 }
 /* ヘッダー ------------------------------- */
 header {
@@ -280,7 +285,7 @@ header {
     position: absolute;
     top: 50%;
     left: 50%;
-    border: 3px solid $font-color;
+    border: 2px solid $font-color;
     &:active {
         width: 30%;
         height: 30%;
