--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -315,28 +315,43 @@ header {
 .plan-slider {
     width: 100%;
     margin: 16px auto 64px auto;
-    height: 80vh;
     z-index: 40;
 }
 .plan {
     width: 80%;
-    height: 70vh;
+    aspect-ratio: 1 / 1;
     margin: 0 8px;
-    background-color: $secondary-color;
-    border-radius: 24px;
+    background-color: beige;
+    border-radius: 50%;
     border: 3px solid $font-color;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
+.option {
+    width: 40%;
+    aspect-ratio: 1 / 1;
+    margin: 0 8px;
+    background-color: $secondary-color;
+    border-radius: 50%;
+    border: 3px solid $font-color;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .plan-top {
-    margin: 0 auto;
-    height: 30%;
+    margin: 5% auto 0 auto;
+    height: 50%;
 }
 .plan-title {
     height: 10%;
     text-align: center;
-    font-size: 10vw;
+    font-size: 2em;
+}
+.option-title {
+    height: 10%;
+    text-align: center;
 }
 .bird-slider {
     position: absolute;
