--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -102,7 +102,9 @@ body {
   padding: 6px 18px;
   border-radius: 20px;
   position: relative;
+  display: inline;
   z-index: 10;
+  cursor: pointer;
 }
 
 /* ヘッダー ------------------------------- */
@@ -372,6 +374,7 @@ header {
 }
 
 .option {
+  position: relative;
   width: 40%;
   aspect-ratio: 1/1;
   margin: 0 8px;
@@ -386,18 +389,37 @@ header {
 
 .plan-top {
   margin: 5% auto 0 auto;
-  height: 50%;
+  height: 40%;
 }
 
 .plan-title {
-  height: 10%;
   text-align: center;
-  font-size: 2em;
+  font-size: 6vw;
+  line-height: 1.3;
 }
 
 .option-title {
-  height: 10%;
   text-align: center;
+  line-height: 1;
+  font-size: 4vw;
+}
+
+.button-plus {
+  position: absolute;
+  bottom: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 25%;
+  height: 25%;
+}
+
+.button-hide {
+  position: absolute;
+  top: -10%;
+  right: -5%;
+  transform: rotateZ(45deg);
+  width: 20%;
+  height: 20%;
 }
 
 .bird-slider {
@@ -423,6 +445,28 @@ header {
     top: -100%;
   }
 }
+.modal-frame {
+  position: fixed;
+  z-index: 110;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: rgba(255, 255, 255, 0.5);
+  display: none;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  position: relative;
+  background-color: beige;
+  border: 3px solid #48575e;
+  width: 70%;
+  height: 70%;
+  border-radius: 24px;
+}
+
 .area-footer {
   width: 100%;
   padding: 40px 0 100px 0;
