--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -96,7 +96,9 @@ body {
     padding: 6px 18px;
     border-radius: 20px;
     position: relative;
+    display: inline;
     z-index: 10;
+    cursor: pointer;
 }
 /* ヘッダー ------------------------------- */
 header {
@@ -329,6 +331,7 @@ header {
     justify-content: center;
 }
 .option {
+    position: relative;
     width: 40%;
     aspect-ratio: 1 / 1;
     margin: 0 8px;
@@ -342,16 +345,33 @@ header {
 }
 .plan-top {
     margin: 5% auto 0 auto;
-    height: 50%;
+    height: 40%;
 }
 .plan-title {
-    height: 10%;
     text-align: center;
-    font-size: 2em;
+    font-size: 6vw;
+    line-height: 1.3;
 }
 .option-title {
-    height: 10%;
     text-align: center;
+    line-height: 1;
+    font-size: 4vw
+}
+.button-plus {
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 25%;
+    height: 25%;
+}
+.button-hide {
+    position: absolute;
+    top: -10%;
+    right: -5%;
+    transform: rotateZ(45deg);
+    width: 20%;
+    height: 20%;
 }
 .bird-slider {
     position: absolute;
@@ -365,6 +385,26 @@ header {
     0% { left: -120%; top: 60%; }
     80% { left: -120%; top: 60%; }
     100% { left: 100%; top: -100%; }
+}
+.modal-frame {
+    position: fixed;
+    z-index: 110;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: rgba($color: white, $alpha: 0.5);
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+.modal-content {
+    position: relative;
+    background-color: beige;
+    border: 3px solid $font-color;
+    width: 70%;
+    height: 70%;
+    border-radius: 24px;
 }
 .area-footer {
     width: 100%;
