--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -192,7 +192,7 @@ header {
 .bg {
     position: fixed;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background-image: url("../images/bg-water.svg");
     background-size: cover;
 }
@@ -319,6 +319,11 @@ header {
     margin: 16px auto 64px auto;
     z-index: 40;
 }
+.option-slider {
+    width: 100%;
+    margin: 16px auto 64px auto;
+    z-index: 40;
+}
 .plan {
     width: 80%;
     aspect-ratio: 1 / 1;
@@ -367,11 +372,10 @@ header {
 }
 .button-hide {
     position: absolute;
-    top: -10%;
-    right: -5%;
+    top: -10px;
+    right: -10px;
     transform: rotateZ(45deg);
-    width: 20%;
-    height: 20%;
+    width: 40px;
 }
 .bird-slider {
     position: absolute;
@@ -393,7 +397,7 @@ header {
     height: 100%;
     left: 0;
     top: 0;
-    background-color: rgba($color: white, $alpha: 0.5);
+    background-color: rgba($color: white, $alpha: 0.7);
     display: none;
     align-items: center;
     justify-content: center;
@@ -402,8 +406,8 @@ header {
     position: relative;
     background-color: beige;
     border: 3px solid $font-color;
-    width: 70%;
-    height: 70%;
+    width: 80%;
+    max-width: 600px;
     border-radius: 24px;
 }
 .area-footer {
