--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -191,8 +191,11 @@ header {
 /* メイン ------------------------------ */
 .bg {
     position: fixed;
+    top: 0;
+    left: 0;
     width: 100vw;
     height: 100%;
+    height: 100dvh;
     background-image: url("../images/bg-water.svg");
     background-size: cover;
 }
