--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -220,9 +220,10 @@ header {
   left: 0;
   width: 100vw;
   height: 100%;
-  height: 100dvh;
+  height: 100lvh;
   background-image: url("../images/bg-water.svg");
   background-size: cover;
+  transform: translateZ(0.01px);
 }
 
 .area-top {
@@ -328,6 +329,7 @@ header {
   top: 50%;
   left: 50%;
   border: 2px solid #48575e;
+  cursor: pointer;
 }
 .bg-button:active {
   width: 30%;
@@ -344,18 +346,32 @@ header {
 
 .game-button {
   width: 70%;
-  height: 70%;
+  font-size: 2em;
+  text-align: center;
+  color: #fbcb7b;
+  aspect-ratio: 1/1;
   border: 3px solid #48575e;
   border-radius: 10px;
   background-color: #eb5e30;
   box-shadow: 0px 12px 0 #7a5143;
   transition: 0.3s;
+  cursor: pointer;
 }
 
 .pop-sub {
   text-align: center;
   font-size: 1.5em;
   color: white;
+}
+
+.menu-title {
+  font-size: 2em;
+  line-height: 1;
+  width: -moz-max-content;
+  width: max-content;
+  font-weight: bold;
+  border-bottom: 10px double #48575e;
+  margin: 0 auto;
 }
 
 .plan-slider {
