--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -195,9 +195,10 @@ header {
     left: 0;
     width: 100vw;
     height: 100%;
-    height: 100dvh;
+    height: 100lvh;
     background-image: url("../images/bg-water.svg");
     background-size: cover;
+    transform: translateZ(0.01px);
 }
 .area-top {
     width: 100%;
@@ -291,6 +292,7 @@ header {
     top: 50%;
     left: 50%;
     border: 2px solid $font-color;
+    cursor: pointer;
     &:active {
         width: 30%;
         height: 30%;
@@ -305,17 +307,29 @@ header {
 }
 .game-button {
     width: 70%;
-    height: 70%;
+    font-size: 2em;
+    text-align: center;
+    color: $secondary-color;
+    aspect-ratio: 1 / 1;
     border: 3px solid $font-color;
     border-radius: 10px;
     background-color: $primary-color;
     box-shadow: 0px 12px 0 #7a5143;
     transition: 0.3s;
+    cursor: pointer;
 }
 .pop-sub {
     text-align: center;
     font-size: 1.5em;
     color: white;
+}
+.menu-title {
+    font-size: 2em;
+    line-height: 1;
+    width: max-content;
+    font-weight: bold;
+    border-bottom: 10px double $font-color;
+    margin: 0 auto;
 }
 .plan-slider {
     width: 100%;
