--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -42,7 +42,7 @@ body {
   background-image: linear-gradient(to bottom, rgb(255, 255, 255), rgba(255, 255, 255, 0));
   position: fixed;
   top: 0;
-  z-index: 50;
+  z-index: 99;
   width: 100%;
   height: 80px;
 }
@@ -51,7 +51,7 @@ body {
   background-image: linear-gradient(to top, rgb(255, 255, 255), rgba(255, 255, 255, 0));
   position: fixed;
   bottom: 0;
-  z-index: 50;
+  z-index: 99;
   width: 100%;
   height: 80px;
 }
@@ -70,7 +70,7 @@ body {
 .climber-frame {
   position: fixed;
   width: 8px;
-  bottom: 15%;
+  bottom: 10%;
   z-index: 30;
 }
 
@@ -191,10 +191,19 @@ header {
   background: #fbcb7b;
   position: absolute;
   top: 50px;
+  height: 100lvh;
+  left: 0;
   width: 100%;
-  z-index: 9999;
-  border-bottom-left-radius: 12px;
-  border-bottom-right-radius: 12px;
+  z-index: 90;
+}
+
+.navi-container {
+  margin: 0 auto;
+  width: 90%;
+  max-width: 1024px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .navigation_list {
@@ -204,13 +213,10 @@ header {
 }
 
 .navigation_link {
-  font-weight: 700;
-  font-size: 16px;
   color: #48575e;
   text-decoration: none;
   display: block;
-  padding: 8px 24px;
-  transition: 0.5s;
+  padding: 8px 0;
 }
 
 /* メイン ------------------------------ */
@@ -338,7 +344,7 @@ header {
 
 .game-frame {
   width: 50%;
-  height: 50%;
+  aspect-ratio: 1/1;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -347,15 +353,22 @@ header {
 .game-button {
   width: 70%;
   font-size: 2em;
+  font-weight: 900;
   text-align: center;
   color: #fbcb7b;
   aspect-ratio: 1/1;
-  border: 3px solid #48575e;
+  border: 2px solid #48575e;
   border-radius: 10px;
   background-color: #eb5e30;
   box-shadow: 0px 12px 0 #7a5143;
   transition: 0.3s;
   cursor: pointer;
+}
+
+.arrow {
+  width: 10%;
+  margin: 24px auto;
+  display: block;
 }
 
 .pop-sub {
