--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -45,7 +45,7 @@ body {
     background-image: linear-gradient(to bottom, rgba(255,255,255,1), rgba(255,255,255,0));
     position: fixed;
     top: 0;
-    z-index: 50;
+    z-index: 99;
     width: 100%;
     height: 80px;
 }
@@ -53,7 +53,7 @@ body {
     background-image: linear-gradient(to top, rgba(255,255,255,1), rgba(255,255,255,0));
     position: fixed;
     bottom: 0;
-    z-index: 50;
+    z-index: 99;
     width: 100%;
     height: 80px;
 }
@@ -70,7 +70,7 @@ body {
 .climber-frame {
     position: fixed;
     width: 8px;
-    bottom: 15%;
+    bottom: 10%;
     z-index: 30;
 }
 .climber {
@@ -169,10 +169,18 @@ header {
     background: $secondary-color;
     position: absolute;
     top: 50px;
+    height: 100lvh;
+    left: 0;
     width: 100%;
-    z-index: 9999;
-    border-bottom-left-radius: 12px;
-    border-bottom-right-radius: 12px;
+    z-index: 90;
+}
+.navi-container {
+    margin: 0 auto;
+    width: 90%;
+    max-width: 1024px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
 }
 .navigation_list {
     list-style: none;
@@ -180,13 +188,10 @@ header {
     margin: 0;
 }
 .navigation_link {
-    font-weight: 700;
-    font-size: 16px;
     color: $font-color;
     text-decoration: none;
     display: block;
-    padding: 8px 24px;
-    transition: .5s;
+    padding: 8px 0;
 }
 /* メイン ------------------------------ */
 .bg {
@@ -300,7 +305,7 @@ header {
 }
 .game-frame {
     width: 50%;
-    height: 50%;
+    aspect-ratio: 1 / 1;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -308,15 +313,21 @@ header {
 .game-button {
     width: 70%;
     font-size: 2em;
+    font-weight: 900;
     text-align: center;
     color: $secondary-color;
     aspect-ratio: 1 / 1;
-    border: 3px solid $font-color;
+    border: 2px solid $font-color;
     border-radius: 10px;
     background-color: $primary-color;
     box-shadow: 0px 12px 0 #7a5143;
     transition: 0.3s;
     cursor: pointer;
+}
+.arrow {
+    width: 10%;
+    margin: 24px auto;
+    display: block;
 }
 .pop-sub {
     text-align: center;
