--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -79,7 +79,7 @@ body {
   height: 180px;
   transform: translate(45%);
   background-image: url("../images/climber.svg");
-  background-size: 300% auto;
+  background-size: 500% auto;
   background-repeat: no-repeat;
   background-position: 0 0;
   z-index: 30;
@@ -95,6 +95,22 @@ body {
     background-position: -240px 0;
   }
 }
+.scroll-down {
+  display: none;
+  position: absolute;
+  top: -100px;
+  left: -230px;
+  width: 250px;
+}
+
+.scroll-top {
+  display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50px;
+}
+
 .button {
   background-color: #eb5e30;
   color: white;
@@ -200,6 +216,7 @@ header {
 .navi-container {
   margin: 0 auto;
   width: 90%;
+  height: 100%;
   max-width: 1024px;
   position: relative;
   display: flex;
@@ -340,6 +357,14 @@ header {
 .bg-button:active {
   width: 30%;
   height: 30%;
+}
+
+.news {
+  background-color: #fbcb7b;
+  border-radius: 24px;
+  margin: 12px 5%;
+  padding: 12px 24px;
+  z-index: 30;
 }
 
 .game-frame {
@@ -506,7 +531,7 @@ header {
 
 .area-footer {
   width: 100%;
-  padding: 40px 0 100px 0;
+  padding: 40px 0 60px 0;
   position: relative;
   margin-bottom: 8px;
   text-align: center;
