--- a/css/design.scss
+++ b/css/design.scss
@@ -14,14 +14,32 @@ html {
 .media {
     font-size: 16px;
 }
+.media-border {
+    border: 2px solid $font-color;
+}
+.media-container {
+    margin: 0 auto;
+}
 @media screen and (min-width: 768px) {
     .media {
         font-size: 18px;
+    }
+    .media-border {
+        border: 3px solid $font-color;
+    }
+    .media-container {
+        margin: 0 auto;
     }
 }
 @media screen and (min-width: 1024px) {
     .media {
         font-size: 20px;
+    }
+    .media-border {
+        border: 4px solid $font-color;
+    }
+    .media-container {
+        margin: 0 10% 0 auto;
     }
 }
 body {
@@ -31,9 +49,9 @@ body {
     transition: 2s;
     position: relative;
     margin: 0;
+    -webkit-tap-highlight-color: transparent;
 }
 .container {
-    margin: 0 auto;
     width: 98%;
     max-width: 1024px;
     position: relative;
@@ -307,11 +325,9 @@ header {
     width: 25%;
     height: 25%;
     border-radius: 50%;
-    border: none;
     position: absolute;
     top: 50%;
     left: 50%;
-    border: 2px solid $font-color;
     cursor: pointer;
     &:active {
         width: 30%;
@@ -339,7 +355,6 @@ header {
     text-align: center;
     color: $secondary-color;
     aspect-ratio: 1 / 1;
-    border: 2px solid $font-color;
     border-radius: 10px;
     background-color: $primary-color;
     box-shadow: 0px 12px 0 #7a5143;
@@ -404,13 +419,13 @@ header {
 }
 .plan-title {
     text-align: center;
-    font-size: 6vw;
+    font-size: clamp(16px, 6vw, 64px);
     line-height: 1.3;
 }
 .option-title {
     text-align: center;
     line-height: 1;
-    font-size: 4vw
+    font-size: clamp(16px, 4vw, 48px);
 }
 .button-plus {
     position: absolute;
