--- a/css/design.css
+++ b/css/design.css
@@ -153,7 +153,7 @@ body {
   color: white;
   text-decoration: none;
   padding: 6px 18px;
-  border-radius: 20px;
+  border-radius: 24px;
   position: relative;
   display: inline;
   z-index: 10;
@@ -267,25 +267,35 @@ header {
 
 .navigation-list {
   list-style: none;
-  padding: 0;
+  padding: 8px 0 0 0;
   margin: 0;
   line-height: 1.3;
 }
 
 .navigation-link {
-  color: #48575e;
-  text-decoration: none;
-  display: block;
-  padding: 8px 0;
-}
-
-.side-navigation-link {
-  color: #48575e;
+  color: white;
   text-decoration: none;
   display: block;
   padding: 8px 0;
   width: -moz-fit-content;
   width: fit-content;
+  background-color: #eb5e30;
+  border-radius: 24px;
+  padding: 4px 8px;
+  margin-bottom: 6px;
+}
+
+.side-navigation-link {
+  color: white;
+  text-decoration: none;
+  display: block;
+  padding: 8px 0;
+  width: -moz-fit-content;
+  width: fit-content;
+  background-color: #eb5e30;
+  border-radius: 24px;
+  padding: 4px 8px;
+  margin-bottom: 6px;
 }
 
 /* メイン ------------------------------ */
@@ -380,7 +390,7 @@ header {
 
 .palette {
   position: absolute;
-  bottom: 0;
+  bottom: -350px;
   left: -150px;
   border-radius: 50%;
   width: 300px;
@@ -389,7 +399,7 @@ header {
 
 .palette-re {
   position: absolute;
-  bottom: -150px;
+  bottom: -500px;
   left: -300px;
   width: 600px;
   aspect-ratio: 1/1;
@@ -477,12 +487,13 @@ header {
   width: 80%;
   aspect-ratio: 1/1;
   margin: 0 8px;
-  background-color: beige;
   border-radius: 50%;
   border: 3px solid #48575e;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  position: relative;
+}
+
+.plan-image {
+  width: 100%;
 }
 
 .option {
