--- a/css/mugix.scss
+++ b/css/mugix.scss
@@ -1,7 +1,7 @@
 /* 変数 ------------------------------- */
 $base-color: #b9d9c3;
-$bg-color: rgb(255, 253, 235);
-$primary-color: #4e37f9;
+$bg-color: #84fff9;
+$primary-color: #eb5e30;
 $secondary-color: #fbcb7b;
 $tertialy-color: rgb(117, 42, 7);
 $font-color: #48575e;
@@ -30,7 +30,18 @@ body {
     transition: 2s;
     position: relative;
     margin: 0;
-    background-color: $bg-color;
+    background-color: white;
+}
+.bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100%;
+    height: 100lvh;
+    background-image: url("../images/bg-water.svg");
+    background-size: cover;
+    transform: translateZ(0.01px);
 }
 .container {
     margin: 0 auto;
@@ -70,11 +81,32 @@ li {
     margin-bottom: 12px;
 }
 footer {
-    height: 150px;
+    height: 100px;
     background-color: $primary-color;
     color: white;
     text-align: center;
     padding: 50px;
+    z-index: 100;
+}
+.mugi {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-left: 20px;
+    background-color: $primary-color;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.return {
+    position: fixed;
+    top: 60px;
+    right: 0;
+    background-color: $secondary-color;
+    border-radius: 24px;
+    cursor: pointer;
+    z-index: 100;
+    padding: 4px 8px;
 }
 /* ヘッダー ------------------------------- */
 header {
@@ -89,9 +121,6 @@ header {
 .header-color {
     background-color: rgba($color: white, $alpha: 0.0)
 }
-.header-color-open {
-    background-color: $primary-color;
-}
 .logo {
     font-weight: 900;
     font-size: 24px;
@@ -100,99 +129,85 @@ header {
     flex-direction: row;
     align-items: center;
 }
-.hamburger-menu {
-    width: 50px;
-    height: 50px;
-    position: relative;
-    border: none;
-    background: transparent;
-    appearance: none;
-    cursor: pointer;
+/* プラン --------------------------- */
+.area {
+    margin: 40px 0 0 0;
 }
-.hamburger-menu_bar {
-    display: inline-block;
-    width: 50%;
-    height: 3px;
-    background: $font-color;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    transition: .5s;
-}
-.hamburger-menu_bar:first-child {
-    top: 16px;
-}
-.hamburger-menu_bar:nth-child(2) {
-    top: 24px;
-}
-.hamburger-menu_bar:last-child {
-    top: 32px;
-}
-.hamburger-menu-open .hamburger-menu_bar {
-    top: 50%;
-}
-.hamburger-menu-open .hamburger-menu_bar:first-child {
-    transform: translateX(-50%) translateY(-50%) rotate(45deg);
-}
-.hamburger-menu-open .hamburger-menu_bar:last-child {
-    transform: translateX(-50%) translateY(-50%) rotate(-45deg);
-}
-.hamburger-menu-open .hamburger-menu_bar:nth-child(2) {
-    display: none;
-}
-.navigation {
-    display: none;
-    background: $primary-color;
-    position: absolute;
-    top: 49px;
-    height: 100lvh;
-    left: 0;
-    width: 100%;
-    z-index: 90;
-}
-.navi-container {
-    margin: 0 auto;
-    width: 90%;
-    height: 100%;
-    max-width: 1024px;
-    position: relative;
+.menu-area {
     display: flex;
     flex-direction: column;
 }
-.navigation-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+@media screen and (min-width: 768px) {
+    .menu-area {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
 }
-.navigation-link {
-    color: white;
+.menu {
+    background-color: $secondary-color;
+    border-radius: 24px;
+    flex: 1;
+    margin: 8px 4px;
+    display: flex;
+    flex-direction: column;
+    padding: 4px 8px;
+}
+.button-small {
     text-decoration: none;
-    display: block;
-    padding: 8px 0;
-}
-.navigation-main {
+    text-align: center;
     color: white;
-    text-decoration: none;
-    font-size: 24px;
-    font-weight: 900;
-    margin: 8px 0 0 0;
+    background-color: $primary-color;
+    border-radius: 24px;
+    cursor: pointer;
+    padding: 4px 8px;
+    margin: 24px auto 8px auto; 
 }
-.navigation-sub {
-    margin: 0 0 8px 36px;
-    color: white;
-}
-.mugi {
-    position: absolute;
-    right: 0;
-    bottom: 60px;
+.circle {
+    background-color: $secondary-color;
     width: 100px;
     height: 100px;
+    position: absolute;
+    top: -50%;
+    left: 0;
     border-radius: 50%;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    z-index: 0;
 }
-.header-border {
-    border-top: 2px solid white;
+.button-wide {
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    color: white;
+    background-color: $primary-color;
+    border-radius: 24px;
+    cursor: pointer;
+    font-size: 1.3em;
+    padding: 8px 8px;
+    margin: 24px 10% 24px 10%; 
+}
+.plan-title {
+    font-size: clamp(16px, 3em, 48px);
+    margin-top: 20px;
+    padding-top: 80px;
+}
+.plan-subtitle {
+    width: fit-content;
+    border-bottom: 4px solid $primary-color;
+}
+.status-area {
+    display: flex;
+    font-size: clamp(16px, 1.5em, 20px);
+    text-align: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    color: white;
+}
+.status {
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 4px 4px;
 }
