--- a/css/design.scss
+++ b/css/design.scss
@@ -11,6 +11,10 @@ $font-subcolor: green;
 html {
     scroll-behavior: smooth;
 }
+a {
+    text-decoration: none;
+    color: inherit;
+}
 .media {
     font-size: 16px;
 }
@@ -372,6 +376,59 @@ header {
         height: 30%;
     }
 }
+.bg-palette-button {
+    position: relative;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 60px;
+    border-top-right-radius: 12px;
+    border-bottom-right-radius: 12px;
+}
+.bg-arrow {
+    width: 80%;
+    height: 80%;
+    transform: rotateZ(-90deg);
+    transition: 0.5s;
+}
+.bg-arrow-reverse {
+    transform: rotateZ(90deg);
+}
+.bg-text {
+    transform: translateX(-100%);
+    transition: 0.5s;
+    font-size: 1.2em;
+}
+.bg-palette {
+    position: relative;
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: fit-content;
+    height: 80px;
+    padding-left: 4px;
+    border-top-right-radius: 12px;
+    border-bottom-right-radius: 12px;
+    z-index: 50;
+    transform: translateX(-100%);
+    transition: 0.5s;
+}
+.bg-palette-appear {
+    transform: translateX(0);
+}
+.bg-picker {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    cursor: pointer;
+    margin-right: 4px;
+    &:active {
+        transform: scale(1.3, 1.3);
+    }
+}
 .news {
     background-color: $secondary-color;
     border-radius: 24px;
@@ -527,19 +584,17 @@ header {
 }
 /* jquery ---------------------------------- */
 .fade-in-left {
-    opacity: 0;
-    transform: translate(-50%, 0);
-    transition: 2s;
+    transform: translate(-100%, 0);
+    transition: 1s;
 }
 .fade-in-right {
-    opacity: 0;
-    transform: translate(50%, 0);
-    transition: 2s;
+    transform: translate(100%, 0);
+    transition: 1s;
 }
 .fade-in-bottom {
     opacity: 0;
     transform: translate(0, 50%);
-    transition: 2s;
+    transition: 1s;
 }
 .is-show {
     transform: translate(0, 0);
