--- a/css/design.scss
+++ b/css/design.scss
@@ -275,42 +275,8 @@ header {
     padding:6px 8px 2px 16px;
 }
 .navigation-sub {
-    margin: 0 0 0 20px;
+    margin: 0 0 0 30px;
     
-}
-.navigation-link {
-    color: white;
-    text-decoration: none;
-    display: block;
-    width: fit-content;
-    background-color: $primary-color;
-    border-radius: 24px;
-    padding: 4px 8px;
-    margin: 8px 0 8px 8px;
-}
-.side-navigation-link {
-    color: white;
-    text-decoration: none;
-    display: block;
-    padding: 8px 0;
-    width: fit-content;
-    background-color: $primary-color;
-    border-radius: 24px;
-    padding: 4px 8px;
-    margin-bottom: 6px;
-}
-.main-menu {
-    background-image: url("../images/selif.svg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    position: relative; 
-    width: 250px;
-    margin-left: -8%;
-    z-index: 110;
-    text-align: center;
-    color: $primary-color;
-    padding-top: 20px;
-    font-size: 18px;
 }
 /* メイン ------------------------------ */
 .bg {
@@ -466,17 +432,10 @@ header {
     color: white;
 }
 .work-number {
-    background-color: $primary-color;
-    color: white;
-    border-radius: 50%;
     width: 100px;
     height: 100px;
-    font-size: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: 1s;
     margin: 0 auto 20px auto;
+    display: block;
 }
 .menu-title {
     font-size: 2em;
@@ -492,15 +451,6 @@ header {
     width: 90%;
     margin: 20px auto;
 }
-.area-footer {
-    width: 100%;
-    padding: 40px 0 60px 0;
-    position: relative;
-    margin-bottom: 8px;
-    text-align: center;
-    background-color: $secondary-color;
-    border-top: 3px solid $font-color;
-}
 footer {
     background-color: grey;
     padding: 40px 0 60px 0;
@@ -509,6 +459,36 @@ footer {
     text-align: center;
     z-index: 0;
     color: white;
+}
+/* privacy_policy -------------------------- */
+.mugi {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-left: 20px;
+    background-color: $primary-color;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.return {
+    position: fixed;
+    top: 60px;
+    right: 20px;
+    background-color: $secondary-color;
+    border-radius: 24px;
+    cursor: pointer;
+    z-index: 100;
+    padding: 4px 8px;
+}
+.sentense {
+    margin-bottom: 24px;
+    line-height: 2;
+}
+.left-frame {
+    border-left: 10px solid $primary-color;
+    padding-left: 12px;
+    font-size: 1.5em;
 }
 /* jquery ---------------------------------- */
 .fade-in-left {
